# cmake_install_test

./: :w  CMakeLists.txt  README.md
src/: foolib.cpp  foolib.hpp  lib.cpp  lib.hpp
